# streamvox-agent-voice-kit

./: .gitignore  AGENTS.md  README.md  pyproject.toml
adapters/openclaw/: SKILL.md
docs/: agent-contract.md  claude-code.md  codex.md  event-protocol.md  install.md  manual-acceptance.md  openclaw.md  runtime.md  skills文档说明.md  项目说明.md
docs/models/: qwen3-tts-clone.md  s2-pro.md  voxcpm2.md
examples/workflow_events/: demo.py
scripts/: install.ps1  install.sh
skills/streamvox-runtime/: SKILL.md
skills/streamvox-runtime/assets/: style-catalog.json
skills/streamvox-runtime/references/models/: qwen3-tts-clone.md  s2-pro.md  voxcpm2.md
skills/streamvox-runtime/references/personality/: ancient_swordsman.md  earnest_gentle.md  extreme_chuunibyou.md  green_tea.md  irritable_man.md  laid_back_expert.md  professional_assistant.md  seductive_diva.md  strict_teacher.md
streamvox_agent_voice/: __init__.py  bootstrap.py  client.py  events.py  policy.py  skill_catalog.py  skill_models.py  skill_planner.py  template_installer.py  windows_command_installer.py
streamvox_agent_voice/asr/: __init__.py  service.py
streamvox_agent_voice/cli/: __init__.py  agent.py  console_encoding.py  json_options.py  runtime.py  runtime_cli_utils.py  runtime_probe.py  runtime_supervisor.py  say.py
streamvox_agent_voice/config/: stream_kwargs.yaml
streamvox_agent_voice/runtime/: __init__.py  app.py  audio_assets.py  audio_player.py  config.py  engine.py  model_docs.py  model_registry.py  queue.py  role_payloads.py  skill_contract.py
