[project]
name = "streamvox-agent-voice-kit"
version = "0.1.0"
description = "Local streaming voice runtime for AI Agent workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.75",
    "cn2an==0.5.23",
    "cryptography>=45.0.0,<46.0.0",
    "fastapi>=0.110.0",
    "gguf==0.18.0",
    "httpx>=0.27.0",
    "hyperpyyaml>=1.2.3",
    "inflect==7.5.0",
    "langdetect==1.0.9",
    "librosa==0.11.0",
    "modelscope==1.30.0",
    "munch==4.0.0",
    "numpy>=2.2.0,<3.0.0",
    "onnxruntime-gpu==1.21.1; sys_platform == 'linux'",
    "python-multipart>=0.0.9",
    "sentencepiece>=0.2.0",
    "soundfile==0.13.1",
    "sounddevice>=0.5.0",
    "srt==3.5.3",
    "tokenizers>=0.22.2",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "typer>=0.12.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
windows-cuda = [
    "onnxruntime-gpu==1.21.1; sys_platform == 'win32'",
]
windows-dml = [
    "onnxruntime-directml==1.21.1; sys_platform == 'win32'",
]
windows-cpu = [
    "onnxruntime==1.21.1; sys_platform == 'win32'",
]

[project.scripts]
streamvox-runtime = "streamvox_agent_voice.cli.runtime:main"
streamvox-say = "streamvox_agent_voice.cli.say:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["streamvox_agent_voice"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
